# cplus_template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
application/: CMakeLists.txt  main.cpp
cbuild/: CMakeCache.txt
include/examples/demo1/: box.h
include/examples/demo2/: line.h
include/examples/demo2/module/: line2.h
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.cpp
src/demo1/: CMakeLists.txt  box.cpp
src/demo2/: CMakeLists.txt  line.cpp
src/demo2/module/: line2.cpp
src/examples/application/: CMakeLists.txt
src/libraries/: CMakeLists.txt
src/logic/: CMakeLists.txt
src/logic/demo/: CMakeLists.txt  box.h
src/logic/demo/src/: box.cpp
src/logic/demo2/module1/: CMakeLists.txt
src/logic/demo2/module1/src/: line.cpp
src/logic/demo2/module2/src/: line2.cpp
src/logic/xdemo/: CMakeLists.txt
src/logic/xdemo2/module1/: CMakeLists.txt
src/logic/xdemo2/module2/: CMakeLists.txt
src/programs/: CMakeLists.txt
src/programs/app1/: CMakeLists.txt
src/programs/app1/src/: main.cpp
src/services/: CMakeLists.txt
src/tools/: CMakeLists.txt
tests/: CMakeLists.txt
tests/demo1_test/: CMakeLists.txt
tests/examples/: CMakeLists.txt  test_box.cpp
